# jupyter-redux

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  cm-entry.js  docker-compose.yml  package-lock.json  package.json  pyproject.toml  rebuild.sh  requirements.txt
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
scripts/: init-shared.sh
specs/001-container-notebook-envs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-container-notebook-envs/checklists/: requirements.md
specs/001-container-notebook-envs/contracts/: rest-api.md  websocket.md
src/: app.py  config.py  container.py  environment.py  executor_client.py  metrics.py  models.py  notebook.py  websocket.py
src/executor/: Dockerfile  __init__.py  entrypoint.sh  server.py
src/static/: environment.html  index.html  notebook.html
src/static/css/: style.css
src/static/js/: app.js  cell.js  cm-bundle.js  notebook.js  ws.js
tests/: conftest.py
